--- a/exp.html
+++ b/exp.html
@@ -221,10 +221,10 @@
         <div class="col-md-6 col-12">
           <ul></ul>
           <div class="controls">
-            <button class="d-block d-md-none" onclick="adjustDay(-1)">
+            <button class="d-block" onclick="adjustDay(-1)">
               <i class="fa fa-angle-up" style="font-size: 24px"></i>
             </button>
-            <button class="d-block d-md-none" onclick="adjustDay(1)">
+            <button class="d-block" onclick="adjustDay(1)">
               <i class="fa fa-angle-down" style="font-size: 24px"></i>
             </button>
           </div>
