--- a/exp.html
+++ b/exp.html
@@ -87,7 +87,7 @@
     </div>
     <img src="iiclogo.png" alt="" class="iicLogo">
     <img src="iicRight.png" alt="" class="iicRight">
-    <div class="navv sticky-top" > 
+    <div class="navv sticky-top d-none d-lg-block" > 
       <a href="#first" class="home">Home</a>
       <a href="#second" class="view">View</a>
       <a href="#third" class="events">Events</a>
