--- a/exp.html
+++ b/exp.html
@@ -87,7 +87,7 @@
     </div>
     <img src="iiclogo.png" alt="" class="iicLogo">
     <img src="iicRight.png" alt="" class="iicRight">
-    <div class="navv sticky-top d-none d-lg-block" > 
+    <div class="navv sticky-top" > 
       <a href="#first" class="home">Home</a>
       <a href="#second" class="view">View</a>
       <a href="#third" class="events">Events</a>
@@ -452,7 +452,7 @@
         </div>
       </div>
       <div class="bottom-center">
-        <p class="bottom-center">Made with <i class="fa-solid fa-heart"></i> by UniRiese</p>
+        <p class="">Made with <i class="fa-solid fa-heart"></i> by UniRiese</p>
     </div>
     </div>
     <script
