--- a/exp.html
+++ b/exp.html
@@ -438,7 +438,7 @@
       <div class="contact">
         contact us
         <div class="email_id">
-          <a href="principal@mlritm.ac.in">email id</a>
+          <a href="tiic@mlritm.ac.in">tiic@mlritm.ac.in</a>
         </div>
       </div>
       <div class="address">
