--- a/exp.html
+++ b/exp.html
@@ -94,11 +94,10 @@
       <a href="#four" class="speakers">Speakers</a>
       <a href="#five" class="about">About</a>
     </div>
-    <header>
-      <h1 class="d-none d-md-block">E-SUMMIT</h1>
-      <h3 class="d-block d-md-none">E-SUMMIT</h3>
-      <h4 class="d-sm-none d-md-block">Entrepreneurial Summit 2024</h4>
-    </header>
+      <div class="centered">
+      <h1 class="d-none d-md-block">E-SUMMIT<br/><span class="spantag">Entrepreneurial Summit 2024</span></h1>
+      <h3 class="d-block d-md-none">E-SUMMIT<br/><span class="spantag">Entrepreneurial Summit 2024</span></h3>
+    </div>
     <main>
       <div class="hero" id="first">
         <div class="card-container">
@@ -115,8 +114,6 @@
               <div class="unique-card-back">
                 <div class="hel">
                   E-Summit 2024 at MLRITM, hosted by Innovation and Incubation Council, is an annual entrepreneurship festival. The summit features various conclaves, including Youth, Innovator, Startup, and Startup Essentials, along with networking, workshops, competitions, and keynote sessions by industry leaders.
-
-
                 </div>
               </div>
             </div>
@@ -183,6 +180,7 @@
         </div>
       </div>
     </main>
+   
     <div class="wrapper" id="second">
       <!-- <div class="head1">Previously at E-Summit</div> -->
       <div class="event-stats">
@@ -416,7 +414,6 @@
         <div class="sponsor-logo"><img src="logo16.png" alt="Sponsor 16" /></div>
         <div class="sponsor-logo"><img src="logo17.png" alt="Sponsor 17" /></div>
         <div class="sponsor-logo"><img src="logo18.png" alt="Sponsor 18" class="sponser-img" /></div>
-        <div class="sponsor-logo"><img src="logo1.png" alt="Sponsor 19" /></div>
         <div class="sponsor-logo"><img src="logo20.png" alt="Sponsor 20" /></div>
       </div>
     </div>
@@ -451,8 +448,8 @@
         </div>
       </div>
       <div class="bottom-center">
-        <p class="">Made with <i class="fa-solid fa-heart"></i> by UniRiese</p>
-    </div>
+        <p class="">Made with <i class="fa-solid fa-heart"></i> by UniReise</p>
+</div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
